--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                         <h1 class="text-white-50 icon-style mx-3">
                             <img class="img-fluid icon-style" src="/assets/img/1667px-Figma-logo.svg.png" alt="..." />
                         </h1>
+                        <h1 class="text-white-50 icon-style mx-3">
+                            <img class="img-fluid icon-style" src="/assets/img/auth0-logo1.png" alt="..." />
+                        </h1>
                     </div>
                 </div>
             </div>
