img file name updates

--- a/index.html
+++ b/index.html
@@ -61,29 +61,26 @@
                     <h2 class="text-dark mb-4">SKILLS</h2>
                     <div class="d-flex flex-row justify-content-between">
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/HTML5_logo_and_wordmark.svg.png"
-                                alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/HTML5_logo_and_wordmark.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/CSS3_logo_and_wordmark.svg.png"
-                                alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/CSS3_logo_and_wordmark.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Bootstrap_logo.svg.png" alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/Bootstrap_logo.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Unofficial_JavaScript_logo_2.svg.png"
+                            <img class="img-fluid icon-style" src="/assets/img/Unofficial_JavaScript_logo_2.png"
                                 alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
                             <img class="img-fluid icon-style" src="/assets/img/nodejs-icon-logo.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/c-sharp-c-icon-456x512-9sej0lrz.png"
-                                alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/csharp.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Vue.js_Logo_2.svg.png" alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/Vue.js_Logo_2.png" alt="..." />
                         </h1>
                     </div>
                     <div class="d-flex flex-row justify-content-between">
@@ -94,17 +91,16 @@
                             <img class="img-fluid icon-style" src="/assets/img/mongdb.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Git_icon.svg.png" alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/Git_icon.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style"
-                                src="/assets/img/Github-circle_(CoreUI_Icons_v1.0.0).svg.png" alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/Github.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
                             <img class="img-fluid icon-style" src="/assets/img/postman.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/1667px-Figma-logo.svg.png" alt="..." />
+                            <img class="img-fluid icon-style" src="/assets/img/Figma.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
                             <img class="img-fluid icon-style" src="/assets/img/auth0-logo1.png" alt="..." />
