--- a/index.html
+++ b/index.html
@@ -64,46 +64,46 @@
                             <img class="img-fluid icon-style" src="assets/img/HTML5_logo_and_wordmark.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/CSS3_logo_and_wordmark.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/CSS3_logo_and_wordmark.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Bootstrap_logo.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/Bootstrap_logo.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Unofficial_JavaScript_logo_2.png"
+                            <img class="img-fluid icon-style" src="assets/img/Unofficial_JavaScript_logo_2.png"
                                 alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/nodejs-icon-logo.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/nodejs-icon-logo.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/csharp.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/csharp.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Vue.js_Logo_2.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/Vue.js_Logo_2.png" alt="..." />
                         </h1>
                     </div>
                     <div class="d-flex flex-row justify-content-between">
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/mysql-1-logo.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/mysql-1-logo.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/mongdb.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/mongdb.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Git_icon.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/Git_icon.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Github.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/Github.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/postman.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/postman.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/Figma.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/Figma.png" alt="..." />
                         </h1>
                         <h1 class="text-white-50 icon-style mx-3">
-                            <img class="img-fluid icon-style" src="/assets/img/auth0-logo1.png" alt="..." />
+                            <img class="img-fluid icon-style" src="assets/img/auth0-logo1.png" alt="..." />
                         </h1>
                     </div>
                 </div>
