--- a/index.html
+++ b/index.html
@@ -200,14 +200,19 @@
             </div>
             <!-- Project Four Row-->
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/TowerHome.PNG" alt="..." /></div>
+                <div class="col-lg-6">
+                    <a href="" target="_blank">
+                        <img class="img-fluid" src="assets/img/gatherwise.PNG" alt="Check out gatherwise!" />
+                </div>
+                </a>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Tower</h4>
-                                <p class="mb-0 text-white-50">A full-stack application where users can create listings
-                                    for events and claim tickets for the events. Built using a Vue.js front-end and a
+                                <h4 class="text-white">g a t h e r w i s e</h4>
+                                <p class="mb-0 text-white-50">A full-stack application where users can create event
+                                    listings and snag tickets for those events. Users can also leave comments for
+                                    events! Built using a Vue.js front-end and a
                                     Node.js back-end.</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
@@ -218,10 +223,9 @@
             <!-- Project Five Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6">
-                    <!-- <a href="https://jordanldiaz.github.io/kiwiKlicker/" target="_blank" class="">
-
-                    </a> -->
-                    <img class="img-fluid" src="assets/img/Kiwi-Klicker.PNG" alt="..." />
+                    <a href="https://jordanldiaz.github.io/kiwiKlicker/" target="_blank" class="">
+                        <img class="img-fluid" src="assets/img/Kiwi-Klicker.PNG" alt="Check out Kiwi Klicker!" />
+                    </a>
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
