--- a/index.html
+++ b/index.html
@@ -149,16 +149,18 @@
                 <h1 class="col-6 text-center">Featured Applications</h1>
             </div>
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/DailyRhythm2.PNG" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/DailyRhythm2.PNG" alt="..." /></div>
                 <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
+                    <div class="bg-black text-center h-100">
+                        <div class="d-flex">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Daily Rhythm</h4>
-                                <p class="mb-0 text-white-50">A full-stack habit tracking app where users set
+                                <p class="text-white-50">A full-stack habit tracking app where users set
                                     long term goals that can be broken down by daily "rhythms" and
                                     "beats". Built using a Vue.js front-end, a
                                     Node.js back-end, and a MongoDB database.</p>
+                                <p class="text-white-50">Live site coming soon!</p>
+
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -166,16 +168,17 @@
                 </div>
             </div>
             <!-- Project Two Row-->
-            <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/KeeprHome.PNG" alt="..." /></div>
+            <div class="row mb-5 mb-lg-0 gx-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="..." /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Keepr</h4>
-                                <p class="mb-0 text-white-50">A full-stack application similar to Pinterest where users
+                                <p class="text-white-50">A full-stack application similar to Pinterest where users
                                     can share images and keep them in "vaults". Built using a Vue.js front-end, a
                                     C# and .Net back-end, and a MySQL database.</p>
+                                <p class="text-white-50">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -184,14 +187,16 @@
             </div>
             <!-- Project Three Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/AllSpice.PNG" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/AllSpice.PNG" alt="..." /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">All Spice</h4>
-                                <p class="mb-0 text-white-50">A full-stack recipe tracking application using Vue.js for
+                                <p class="text-white-50">A full-stack recipe tracking application using Vue.js for
                                     front-end, C# and .Net for back-end, and MySQL for database. </p>
+                                <p class="text-white-50">Live site coming soon!</p>
+
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -199,21 +204,22 @@
                 </div>
             </div>
             <!-- Project Four Row-->
-            <div class="row gx-0 justify-content-center">
+            <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6">
-                    <a href="" target="_blank">
-                        <img class="img-fluid" src="assets/img/gatherwise.PNG" alt="Check out gatherwise!" />
+                    <!-- <a href="" target="_blank"> -->
+                    <img class="img-fluid h-100" src="assets/img/gatherwise.PNG" alt="Check out gatherwise!" />
+                    <!-- </a> -->
                 </div>
-                </a>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">g a t h e r w i s e</h4>
-                                <p class="mb-0 text-white-50">A full-stack application where users can create event
+                                <p class="text-white-50">A full-stack application where users can create event
                                     listings and snag tickets for those events. Users can also leave comments for
                                     events! Built using a Vue.js front-end and a
                                     Node.js back-end.</p>
+                                <p class="text-white-50">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -224,16 +230,17 @@
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6">
                     <a href="https://jordanldiaz.github.io/kiwiKlicker/" target="_blank" class="">
-                        <img class="img-fluid" src="assets/img/Kiwi-Klicker.PNG" alt="Check out Kiwi Klicker!" />
+                        <img class="img-fluid h-100" src="assets/img/Kiwi-Klicker.PNG" alt="Check out Kiwi Klicker!" />
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
+                    <div class="bg-black text-center h-100">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Kiwi Klicker</h4>
-                                <p class="mb-0 text-white-50">A fun and simple clicker game that utilizes HTML5, CSS,
+                                <p class="text-white-50">A fun and simple clicker game that utilizes HTML5, CSS,
                                     and JavaScript. </p>
+                                <p class="text-white-50">Click the image to play!</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
