--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Full Stack Software Developer</h2>
                     <h5></h5>
                     <a class="btn btn-primary" href="#about">Learn More</a>
-                    <!-- TODO add button to open modal with resume (ref molly's page) -->
                 </div>
             </div>
         </div>
@@ -119,7 +118,7 @@
                     <img class="img-fluid mb-3 mb-lg-0 pic rounded" src="assets/img/Jordan-Diaz-5.jpg" alt="..." />
                 </div>
                 <div class="col-xl-6 col-lg-5">
-                    <div class="featured-text text-center text-lg-left">
+                    <div class="featured-text text-lg-left">
                         <h4><b>About Me</b></h4>
                         <h5>Hello! I'm Jordan Diaz</h5>
                         <p class="text-black-50 mb-0">I am a software developer with a passion for utilizing technology
@@ -151,16 +150,15 @@
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/DailyRhythm2.PNG" alt="..." /></div>
                 <div class="col-lg-6">
-                    <div class="bg-black text-center h-100">
+                    <div class="bg-black h-100">
                         <div class="d-flex">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Daily Rhythm</h4>
+                            <div class="project-text w-100 my-auto text-lg-left">
+                                <h4 class="text-white text-center">Daily Rhythm</h4>
                                 <p class="text-white-50">A full-stack habit tracking app where users set
                                     long term goals that can be broken down by daily "rhythms" and
                                     "beats". Built using a Vue.js front-end, a
                                     Node.js back-end, and a MongoDB database.</p>
-                                <p class="text-white-50">Live site coming soon!</p>
-
+                                <p class="text-white-50 text-center">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -169,16 +167,18 @@
             </div>
             <!-- Project Two Row-->
             <div class="row mb-5 mb-lg-0 gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="..." /></div>
+                <div class="col-lg-6">
+                    <img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="..." />
+                </div>
                 <div class="col-lg-6 order-lg-first">
-                    <div class="bg-black text-center h-100 project">
+                    <div class="bg-black h-100 project">
                         <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Keepr</h4>
+                            <div class="project-text w-100 my-auto text-lg-right">
+                                <h4 class="text-white text-center">Keepr</h4>
                                 <p class="text-white-50">A full-stack application similar to Pinterest where users
                                     can share images and keep them in "vaults". Built using a Vue.js front-end, a
                                     C# and .Net back-end, and a MySQL database.</p>
-                                <p class="text-white-50">Live site coming soon!</p>
+                                <p class="text-white-50 text-center">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -187,16 +187,17 @@
             </div>
             <!-- Project Three Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/AllSpice.PNG" alt="..." /></div>
                 <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
+                    <img class="img-fluid h-100" src="assets/img/AllSpice.PNG" alt="..." />
+                </div>
+                <div class="col-lg-6">
+                    <div class="bg-black h-100 project">
                         <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">All Spice</h4>
+                            <div class="project-text w-100 my-auto text-lg-left">
+                                <h4 class="text-white text-center">All Spice</h4>
                                 <p class="text-white-50">A full-stack recipe tracking application using Vue.js for
                                     front-end, C# and .Net for back-end, and MySQL for database. </p>
-                                <p class="text-white-50">Live site coming soon!</p>
-
+                                <p class="text-white-50 text-center">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -211,15 +212,15 @@
                     <!-- </a> -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
-                    <div class="bg-black text-center h-100 project">
+                    <div class="bg-black h-100 project">
                         <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">g a t h e r w i s e</h4>
+                            <div class="project-text w-100 my-auto text-lg-right">
+                                <h4 class="text-white text-center">g a t h e r w i s e</h4>
                                 <p class="text-white-50">A full-stack application where users can create event
                                     listings and snag tickets for those events. Users can also leave comments for
                                     events! Built using a Vue.js front-end and a
                                     Node.js back-end.</p>
-                                <p class="text-white-50">Live site coming soon!</p>
+                                <p class="text-white-50 text-center">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -234,13 +235,13 @@
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <div class="bg-black text-center h-100">
+                    <div class="bg-black h-100">
                         <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Kiwi Klicker</h4>
+                            <div class="project-text w-100 my-auto text-lg-left">
+                                <h4 class="text-white text-center">Kiwi Klicker</h4>
                                 <p class="text-white-50">A fun and simple clicker game that utilizes HTML5, CSS,
                                     and JavaScript. </p>
-                                <p class="text-white-50">Click the image to play!</p>
+                                <p class="text-white-50 text-center">Click the image to play!</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
